Save/Update files

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -396,11 +396,11 @@
  clan_head_council_desc:0 "我々の土地のもっとも重要な一族の長の助言を求めることで、我々はより安定した政府を実現することができ、土地に大きな繁栄をもたらすことができる。"
  duties_on_sahara_trade:0 "サハラ交易の義務"
  duties_on_sahara_trade_desc:0 "毎年、塩の大キャラバンは砂漠の旅へ出発するため、我々の故郷を離れる。我々はこの交易に関税と義務を課すことで、増収を生み出すことができる。"
- ruthenian_nation_title:0 "ルーシの遺産を取り戻す"
- ruthenian_nation_desc:1 "何世紀も前、ルーシの土地はひとつの旗の下で統一され、伝説の都市キエフによって支配されていた。しかしその後、モンゴルの大軍がステップから押し寄せ、土地は略奪され、燃やし尽くされた。奴らは城塞を破壊し、町々をひとつずつ破壊し、キエフすらもこの運命を避けることはできなかった。恐怖の中で、人々はルーシの平野から北へと落ちのびた。この内陸と森林は、今日ロシアと呼ばれている。\n今や北部には新しく尊大な都市が増加しつつある。周囲の小国を併呑し、支配者は新たなるルーシを思い描く。\n現在ではルーシは中心をキエフではなくモスクワにおいている。しかし、真のルーシである我が国は歴史の片隅で沈黙などしない。新参者や偽王どもが我々の先祖の継承者を主張することなど決して許さない。キエフは必ずや立ち上がり、かつての栄光と栄華を取り戻すのだ。ルーシもまたそうだ。"
- ruthenian_ideas:0 "ルーシのアイデア"
- ruthenian_ideas_start:0 "ルーシの伝統"
- ruthenian_ideas_bonus:0 "ルーシの宿願"
+ ruthenian_nation_title:0 "ルテニアの遺産を取り戻す"
+ ruthenian_nation_desc:1 "何世紀も前、ルーシの土地はひとつの旗の下で統一され、伝説の都市キエフによって支配されていた。しかしその後、モンゴルの大軍がステップから押し寄せ、土地は略奪され、燃やし尽くされた。奴らは城塞を破壊し、町々をひとつずつ破壊し、キエフすらもこの運命を避けることはできなかった。恐怖の中で、人々はルーシの平野から北へと落ちのびた。この内陸と森林は、今日ロシアと呼ばれている。\n今や北部には新しく尊大な都市が増加しつつある。周囲の小国を併呑し、支配者は新たなるルーシを思い描く。\n現在ではルーシは中心をキエフではなくモスクワにおいている。しかし、我が国ルテニアは歴史の片隅で沈黙などしない。新参者や偽王どもが我々の先祖の継承者を主張することなど決して許さない。キエフは必ずや立ち上がり、かつての栄光と栄華を取り戻すのだ。ルーシもまたそうだ。"
+ ruthenian_ideas:0 "ルテニアのアイデア"
+ ruthenian_ideas_start:0 "ルテニアの伝統"
+ ruthenian_ideas_bonus:0 "ルテニアの宿願"
  mother_of_russian_cities:0 "ロシア諸邦の母"
  mother_of_russian_cities_desc:0 "モンゴル襲来以前、キエフは歴史的に全ルーシの中心であった。モスクワ・トヴェリ・ノヴゴロド…多くのロシア国家がキエフ陥落後の政治的空白を埋めようとした。しかし、いずれもあのキエフの栄光に並ぶものはなかった。\nこれらの北方の成り上がり者共と異なり、我々はキエフの遺産の正統な後継者であり、キエフの先祖達と同じ土地に暮らし、首都の栄華はキエフに匹敵するまでになった。我々のキエフの継承者としての主張は尊重されねばならない！"
  international_influences:0 "外国の影響"
@@ -410,9 +410,9 @@
  east_and_west:0 "東と西"
  east_and_west_desc:0 "地理的に東西の国に挟まれている我々の位置は、我々の商人たちにこの一帯で非常に有利な交易路の中間業者となる機会を提供する。"
  legacy_of_ancient_rus:0 "古ルーシ人の遺産"
- legacy_of_ancient_rus_desc:0 "キエフ大公国の社会制度は多くの場合、モスクワの専制政治から大きく変化した。ルーシ国家ではより多くの自由が農民に与えられ、国家の農奴制は施行されておらず、貴族たちはそれを食いものにするのでなく、国家のために役立てた。それはルーシ国家を近代的なキエフ・ルーシへと変える助けとなった。"
+ legacy_of_ancient_rus_desc:0 "キエフ大公国の社会制度は多くの場合、モスクワの専制政治から大きく変化した。ルテニアではより多くの自由が農民に与えられ、国家の農奴制は施行されておらず、貴族たちはそれを食いものにするのでなく、国家のために役立てた。それはルテニアを近代的なキエフ・ルーシへと変える助けとなった。"
  reuniting_rus:0 "ルーシの再統合"
- reuniting_rus_desc:0 "キエフ・ルーシはルーシ人の土地に生まれ変わったが、古くからのルーシ人の多くは外国の支配下や小さな公国に住んでいる。ルーシ人たちを再び統合させなければならない！"
+ reuniting_rus_desc:0 "キエフ・ルーシはルテニア人の土地に生まれ変わったが、古くからのルーシ人の多くは外国の支配下や小さな公国に住んでいる。ルーシ人たちを再び統合させなければならない！"
  birth_of_russian_orthodoxy:0 "ロシア正教会の誕生"
  birth_of_russian_orthodoxy_desc:0 "初期のルーシは、さまざまな宗教問題に苦しんだ。988年、コルスンの攻略後に、ウラジーミル1世は自身が洗礼を受けた。キエフに戻った時、彼は一般市民の大部分にドニエプル川での洗礼を命じ、ルーシのキリスト教の最初の一歩を記した。"
  MODIFIER_LIBERTY_DESIRE:0 "独立欲求"
@@ -1513,7 +1513,7 @@
  bah_bidriware_boom:0 "ビードリー器の流行"
  desc_bah_bidriware_boom:0 "ビーダルの職人たちは、ビードリー器として知られる新しい種類の金属工芸品を創り出した。これは現在、地元の経済を活性化させている。"
  flavor_bah.1.t:0 "バフマニー朝の真の首都、ビーダル"
- flavor_bah.1.d:0 "グルバルガの絶え間のない陰謀と不快な雰囲気に疲れ、若い世代の$MONARCH$が最初に行った決断の一つは、バフマニー王国の首都をビーダルへと移すことであった。デカン高原の中央にあるかつての要塞があった地域に、完全に新しい首都が建設されており、それはペルシアとマー・ワラー・アンナフルの偉大な都市に匹敵する壮大な都市である。その37の砦と7つの城門を持つビーダルは、印象的な要塞であり、我々の王朝の防衛の最前線である。\n王室の宮廷自身を印象づけるために建てられたものも、やはり畏敬の念を抱かせるものであり、王朝のトルコ石の王座を持つ謁見室はおそらく家族の最も有名な象徴である。\nこれはもちろん安上がりなものではない。我々の宰相は、緊急の注意を必要とするものの一覧と、我々が発展し続けるのが賢明であろう分野の一覧を今日、我々に伝えてきた。"
+ flavor_bah.1.d:0 "グルバルガの絶え間のない陰謀と不快な雰囲気に疲れ、若い世代の$MONARCH$が最初に行った決断の一つは、バフマニー王国の首都をビーダルへと移すことであった。デカン高原の中央にあるかつての要塞があった地域に、完全に新しい首都が建設されており、それはペルシアとトランスオクシアナの偉大な都市に匹敵する壮大な都市である。その37の砦と7つの城門を持つビーダルは、印象的な要塞であり、我々の王朝の防衛の最前線である。\n王室の宮廷自身を印象づけるために建てられたものも、やはり畏敬の念を抱かせるものであり、王朝のトルコ石の王座を持つ謁見室はおそらく家族の最も有名な象徴である。\nこれはもちろん安上がりなものではない。我々の宰相は、緊急の注意を必要とするものの一覧と、我々が発展し続けるのが賢明であろう分野の一覧を今日、我々に伝えてきた。"
  flavor_bah.1.a:0 "ビーダルは我々の王朝にふさわしい首都のままであるべきだ。"
  flavor_bah.1.b:0 "我々はこれに熱中しないようにしよう。"
  flavor_bah.2.t:0 "適切な人々を引きつける"
