--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -1019,9 +1019,9 @@
  kyzylkum_area:0 "キジルクム"
  kyzylkum_area_name:0 "トルキスタン"
  kyzylkum_area_adj:0 "トルキスタン"
- transoxiana_area:0 "マー・ワラー・アンナフル"
- transoxiana_area_name:0 "マー・ワラー・アンナフル"
- transoxiana_area_adj:0 "マー・ワラー・アンナフル"
+ transoxiana_area:0 "トランスオクシアナ"
+ transoxiana_area_name:0 "トランスオクシアナ"
+ transoxiana_area_adj:0 "トランスオクシアナ"
  khiva_area:0 "ヒヴァ"
  khiva_area_name:0 "ヒヴァ"
  khiva_area_adj:0 "ヒヴァ"
@@ -2156,9 +2156,9 @@
  poland_region:0 "ポーランド"
  poland_region_name:0 "ポーランド"
  poland_region_adj:0 "ポーランド"
- ruthenia_region:0 "ルーシ"
- ruthenia_region_name:0 "ルーシ"
- ruthenia_region_adj:0 "ルーシ"
+ ruthenia_region:0 "ルテニア"
+ ruthenia_region_name:0 "ルテニア"
+ ruthenia_region_adj:0 "ルテニア"
  crimea_region:1 "ポントス草原"
  crimea_region_name:0 "クリミア"
  crimea_region_adj:0 "クリミア"
