--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -43,8 +43,8 @@
  conquer_steppes_russia_mission_desc:0 "遊牧民による我々の南への絶え間ない襲撃の脅威を終わらせる必要がある。タンボフ地域から、我々は遊牧民の群れに対し、打撃を与える準備をすることができる。"
  conquer_remaining_steppes_mission_title:0 "ステップの統一"
  conquer_remaining_steppes_mission_desc:0 "我々は最も脅威的な遊牧民の群れの多くを打ち負かしたが、我々はさらにステップの戦略的地位を向上させることができる。この地域を統合し、残った遊牧民たちを排除しよう。"
- russia_partitions_poland_new_title:0 "ルーシの解放"
- russia_partitions_poland_new_desc:0 "ポーランド共和国は弱く、誇り高いルーシ人と白ロシア人を支配するには不似合いであり、他の国々もこれを実現させようとしている。地域がライバルの間で分割される前に、我々は行動しなければならない。"
+ russia_partitions_poland_new_title:0 "ルテニアの解放"
+ russia_partitions_poland_new_desc:0 "ポーランド共和国は弱く、誇り高いルテニア人と白ロシア人を支配するには不似合いであり、他の国々もこれを実現させようとしている。地域がライバルの間で分割される前に、我々は行動しなければならない。"
  russian_colony_in_west_siberia_new_title:0 "西シベリアを植民地化"
  russian_colony_in_west_siberia_new_desc:0 "我々はシベリアからタタール人を追い出し始めており、これらの地域の保有を強化するため、砦を確立してロシア支配下に持ち込む必要がある。"
  russia_westsiberia.tooltip:0 "§Y[Root.GetName]§!は西シベリア地域に少なくとも§Y15§!の完全に植民地化した州を所有する。"
@@ -548,8 +548,8 @@
  tatar_yoke_mission_desc:0 "愚かなことに、ロシアの君主たちは、我々が過去の遺物であると信じ、長い間、我々への貢物の支払いを停止している。我々は彼らの都市を荒廃させ、女たちを奪い、畑を燃やし、ステップを支配するのが誰であるかを思い出させるだろう。"
  crimean_expansion_horde_title:0 "クリミアの拡張"
  crimean_expansion_horde_desc:0 "クリミアの土地はいくつかの国家に分かれているが、それらは正当にチンギス・カンの後継者に属するものだ。"
- ruin_ruthenia_title:0 "ルーシの破滅"
- ruin_ruthenia_desc:0 "かつてチンギス・カンの軍隊はルーシを荒廃させた。キエフは略奪されて焼かれ、偉大な力が一夜にして灰となった。タタールがドニエプルの肥沃な土地に戻る時だ。"
+ ruin_ruthenia_title:0 "ルテニアの破滅"
+ ruin_ruthenia_desc:0 "かつてチンギス・カンの軍隊はルテニアを荒廃させた。キエフは略奪されて焼かれ、偉大な力が一夜にして灰となった。タタールがドニエプルの肥沃な土地に戻る時だ。"
  boh_hussite_one_title:0 "フス派の復活"
  boh_hussite_one_desc:0 "1415年のヤン・フスの死にもかかわらず、フス派の運動の支持者たちは長年にわたって我々に苦い憤りを抱いてきた。紛争の機会が再び熟したことで、我々が人々に代わって選ばなければならないのは時間の問題である。"
  boh_hussite_one.tooltip:0 "イベント「フス派が戻ってきた！」を完了させた"
@@ -818,8 +818,8 @@
  tr_conquer_steppes_russia_mission_desc:0 "遊牧民による我々の南への絶え間ない襲撃の脅威を終わらせる必要がある。タンボフ地域から、我々は遊牧民の群れに対し、打撃を与える準備をすることができる。"
  tr_conquer_remaining_steppes_mission_title:0 "ステップの統一"
  tr_conquer_remaining_steppes_mission_desc:0 "我々は最も脅威的な遊牧民の群れの多くを打ち負かしたが、我々はさらにステップの戦略的地位を向上させることができる。この地域を統合し、残った遊牧民たちを排除しよう。"
- tr_russia_partitions_poland_new_title:0 "ルーシの解放"
- tr_russia_partitions_poland_new_desc:0 "ポーランド共和国は弱く、誇り高いルーシ人と白ロシア人を支配するには不似合いであり、他の国々もこれを実現させようとしている。地域がライバルの間で分割される前に、我々は行動しなければならない。"
+ tr_russia_partitions_poland_new_title:0 "ルテニアの解放"
+ tr_russia_partitions_poland_new_desc:0 "ポーランド共和国は弱く、誇り高いルテニア人と白ロシア人を支配するには不似合いであり、他の国々もこれを実現させようとしている。地域がライバルの間で分割される前に、我々は行動しなければならない。"
  tr_russian_colony_in_west_siberia_new_title:0 "西シベリアを植民地化せよ"
  tr_russian_colony_in_west_siberia_new_desc:0 "我々はシベリアからタタール人を追い出し始めており、これらの地域の保有を強化するため、砦を確立してロシア支配下に持ち込む必要がある。"
  tr_access_to_the_baltic_sea_title:0 "西方の窓口"
@@ -918,8 +918,8 @@
  tr_kiev_desc:0 "キエフのモンゴル略奪は、我が民族最初の黄金時代、キエフ・ルーシの終わりを告げた。キエフを取り戻し、キエフをかつての栄光の状態に戻し、新しい黄金時代を先導せねばならない。"
  tr_cossacks_title:0 "コサックの徴募"
  tr_cossacks_desc:0 "ザポロージャのコサックは獰猛な戦士だ。もしステップのこの地域を支配できたならば、我が軍隊が増強されることを確信できる。"
- tr_ruthenia_title:0 "ルーシ支配"
- tr_ruthenia_desc:0 "キエフをもう一度我が支配下としたので、我々はキエフ・ルーシの遺産の請求を持つ。従って、全ルーシへのキエフ支配を再建することはごくごく自然である。"
+ tr_ruthenia_title:0 "ルテニアの支配"
+ tr_ruthenia_desc:0 "キエフをもう一度我が支配下としたので、我々はキエフ・ルーシの遺産の請求を持つ。従って、全ルテニアへのキエフ支配を再建することはごくごく自然である。"
  tr_stability_title:0 "国家の統合"
  tr_stability_desc:0 "我々の将来の存続は、拡大は言うまでもなく、国家の安定に大きく左右される。熟練兵の軍を招集し、我が国教のはるか先を目指す前に統治を確立せねばならない。"
  tr_tatar_yoke_title:0 "タタールのくびきの脱却"
