Save/Update files

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -857,7 +857,7 @@
  west_african.20.a.tt:0 "アシャンティはこれをすんなりとは受け入れない可能性があります。"
  west_african.20.b:0 "我々は、彼の優位性を主張するような手段を要求する男のための自由など持っていない。"
  west_african.21.t:0 "黄金の床几戦争"
- west_african.21.d:0 "黄金の床几は誰も汚すことが許されていないアシャンティ王の象徴である。今、彼らと利害関係がないにも関わらず、我々の伝統に対してある程度の敬意を払っていた[From.GetAdjective]は、彼自分が王であるかのように床几に座ることを要求する総督をここに派遣してきた。これは、女王の母親や他の多くの人々を怒らせており、彼らは、この人物を止めなければならず、黄金の床几の尊厳は必要であれば戦争という犠牲を払ってでも保たなければならないと主張している。"
+ west_african.21.d:0 "黄金の床几は誰も汚すことが許されていないアシャンティ王の象徴である。今、彼らと利害関係がないにも関わらず、我々の伝統に対してある程度の敬意を払っていた[From.GetAdjective]は、彼自身が王であるかのように床几に座ることを要求する総督をここに派遣してきた。これは、女王の母親や他の多くの人々を怒らせており、彼らは、この人物を止めなければならず、黄金の床几の尊厳は必要であれば戦争という犠牲を払ってでも保たなければならないと主張している。"
  west_african.21.a:0 "[From.GetName]がそのような愚か者を信頼し、彼らを代表させるのであれば、戦争しか起こらない。"
  west_african.21.b:0 "伝統には戦争を始めるほどの価値はない。"
  west_african.22.t:0 "[Root.Culture.GetName]の自治"
