Save/Update files

--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -113,8 +113,8 @@
  women_history_events.27.b:0 "彼女は賢明な言葉と強い個性を持っている。顧問にしよう。"
  women_history_events.27.c:0 "彼女に統治してもらおう！"
  women_history_events.28.t:0 "ルイーゼ・メクレンブルク＝シュトレーリッツ"
- women_history_events.28.d:0 "このプロイセンの王妃は心が天使のように善良であること、「国民の美徳の中心的存在」という評判、そして彼女と夫との間の愛情と思いやりで有名である。ルイーゼ・メクレンブルク＝シュトレーリッツは9人の子供を持ち、夫はよく彼女の意見を聞き容れていた。彼女は常に宮廷での政治の進展についての情報を与えられ、宮廷では彼女の卓越した知性と手腕が彼女の夫の統治をしやすいようにすることに用いられていた。そして彼女は様々な改革の最前線にいたのである。"
- women_history_events.28.a:0 "彼女は王妃ではなく、我々の顧問になるべきだ。"
+ women_history_events.28.d:0 "このプロイセンの王妃は心が天使のように善良であること、「国民の美徳の中心的存在」という評判、そして彼女と夫との間の愛情と思いやりで有名である。ルイーゼ・メクレンブルク＝シュトレーリッツは9人の子供を持ち、夫はよく彼女の意見を聞き容れていた。彼女は常に宮廷での政治の進展についての情報を与えられ、宮廷では彼女の卓越した知性と手腕が彼女の夫の統治を容易にするために用いられていた。そして彼女は様々な改革の最前線にいたのである。"
+ women_history_events.28.a:0 "彼女はただの王妃ではなく、我々の顧問になるべきだ。"
  women_history_events.28.b:0 "その王妃は宮廷に威信と外交力をもたらす。"
  women_history_events.29.t:0 "ハフサ・ハトゥン"
  women_history_events.29.d:0 "セリム1世の妻であり未亡人である、ハフサ・ハトゥンはオスマン帝国の最初の「ヴァリデ・スルタン」あるいは皇太后である。彼女の王子であったセリムとの結婚は、彼女の父親メングリ1世ギレイの王位のための彼の闘いで、王子を助けた強力で貴重な同盟国として、彼のために確保された。彼女が病になったとき、ハフサ・ハトゥンに投与されたハーブとスパイスの調合による癒しを祝うため、毎年メシル祭が開催されている。彼女は、息子の事実上の共同摂政として、スルタンの母親の移り変わる状況と彼女の増加する権力の割合を示す規則を定めている。"
