Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1183,7 +1183,7 @@
  spanish_nation_diplomatically_desc:0 "新たに発見された地域の世界的な拡大と植民地の設立は、スペインを最も強力で豊かな国のひとつに変えている。スペインの探検家は常に新しい土地に移り住み、国境を広げている。莫大な量の金銀が我々の祖国に戻され、国庫を満たしている。"
  spanish_nation_diplomatically_tutorial_title:0 "外交的なスペイン国家の形成"
  spanish_nation_diplomatically_tutorial_desc:0 "新たに発見された地域の世界的な拡大と植民地の設立は、スペインを最も強力で豊かな国のひとつに変えている。スペインの探検家は常に新しい土地に移り住み、国境を広げている。莫大な量の金銀が我々の祖国に戻され、国庫を満たしている。"
- spanish_unification_effect.tooltip:0 "§Yスペイン§!は、 §Yベイラ§!、§Yアレンテージョ§!と§Yマカロネシア§!を除く§Yイベリア§!地方全体について永続的な請求権を獲得するでしょう！"
+ spanish_unification_effect.tooltip:0 "§Yスペイン§!は、§Yベイラ§!、§Yアレンテージョ§!と§Yマカロネシア§!を除く§Yイベリア§!地方全体について永続的な請求権を獲得するでしょう！"
  mil_boost:0 "軍事への努力の増加"
  desc_mil_boost:0 "我々の軍事的試みは、最近の科学の発展の恩恵を受けている。"
  adm_boost:0 "統治への努力の増加"
@@ -1373,7 +1373,7 @@
  GOVSC_OVEREXTENSION:0 "過剰拡大"
  NO_EFF_NOT_CURR_OVEREXT:0 "過剰拡大していないので、何の影響もありません。"
  NO_OVEREXT_PROVS:0 "過剰拡大の原因になる州はありません。"
- OVEREXT_DESC:0 "我々は中核州ではない州を所有することによって過剰拡大を得ます。あなたの主要文化の植民地は、過剰拡大を免れることができます。 §Y$EVIL$%§!以上の過剰拡大によって、我々は定期的にいくつかの厄介な反乱軍を迎えることになるでしょう。"
+ OVEREXT_DESC:0 "中核州ではない州を所有していると、過剰拡大が発生します。自国の主要文化である植民地からは過剰拡大は発生しません。過剰拡大が§Y$EVIL$%§!を超えると、厄介な反乱軍が繰り返し現れます。過剰拡大の数値が大きいほど反乱軍の発生頻度は高まります。"
  HAVE_LESS_OVEREXT_THAN:0 "過剰拡大が右記未満である："
  HAVE_MORE_OVEREXT_THAN:0 "過剰拡大が右記以上である："
  LACK_TECHNOLOGY_FOR_MERCHANT:0 "我々は商人を配置して交易から利益を得る知識がありません。"
