--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1117,7 +1117,7 @@
  flavor_rus.EVTNAME3203:0 "ボリス・モロゾフ"
  flavor_rus.EVTDESC3203:0 "ロシアの政治家であり、クレムリンの宮廷で長い職歴を持つ会計家である。彼はツァーリであるアレクシスの義理の弟であり、アレクシスの初期の治世中に政府を率いた。給与と大蔵省を監督するモロゾフは、給与を引き下げ、新しい税金を導入することによって国家の収入を増やそうとした。塩に高い税金を課したことで、1648年の塩一揆に名前が残ることとなった。修道院での短い追放の後、モロゾフはモスクワに戻り、彼は政府の多くを支配しながら、自身は目立たない存在であった。彼は後にイヴァン3世によるスジェブニク法典に替わる新しい法典である会議法典の起草に参加した。それは、農奴および定められた階級に対する世襲で不変の所有権を、貴族が独占的な特権として有するだけでなく、農奴制を強固にするものであった。"
  flavor_rus.EVTNAME3401:0 "パメスティ改革"
- flavor_rus.EVTDESC3401:0 "1471年にモスクワがノヴゴロドを侵略し、 リトアニアがノヴゴロドの援助に失敗した後、ノヴゴロドは独立をさらに制限するコロスティニ条約を受け入れざるを得なくなった。イヴァン3世は、父親に起こった事の故に、なおも反乱を警戒し、ノヴゴロド市民の多くを追放した。彼はまた、ノヴゴロド教会の指導者をロシア正教会の指導者と入れ替えた。土地は住民から取り上げられ、兵役の代償として騎兵たちに与えられた。パメスティ制度と呼ばれた土地管理の改革をそこで確立した後、彼はそれをモスクワに導入した。ボヤールと呼ばれた地方貴族の所有地を奪い、それを軍に与えることにより、権力を強化、集中させ、軍や他の家臣たちの忠誠心を築くのに役立てた。1489年までには、ノヴゴロドはもとの姿の抜け殻となり、今ますます増大するロシアの国家の一部となった。"
+ flavor_rus.EVTDESC3401:0 "1471年にモスクワがノヴゴロドを侵略し、リトアニアがノヴゴロドの援助に失敗した後、ノヴゴロドは独立をさらに制限するコロスティニ条約を受け入れざるを得なくなった。イヴァン3世は、父親に起こった事の故に、なおも反乱を警戒し、ノヴゴロド市民の多くを追放した。彼はまた、ノヴゴロド教会の指導者をロシア正教会の指導者と入れ替えた。土地は住民から取り上げられ、兵役の代償として騎兵たちに与えられた。パメスティ制度と呼ばれた土地管理の改革をそこで確立した後、彼はそれをモスクワに導入した。ボヤールと呼ばれた地方貴族の所有地を奪い、それを軍に与えることにより、権力を強化、集中させ、軍や他の家臣たちの忠誠心を築くのに役立てた。1489年までには、ノヴゴロドはもとの姿の抜け殻となり、今ますます増大するロシアの国家の一部となった。"
  flavor_rus.EVTOPTA3401:0 "改革しよう。"
  flavor_rus.EVTOPTB3401:0 "ノヴゴロドのようになろう。"
  flavor_rus.EVTNAME3202:0 "マリュータ・スクラートフ"
@@ -1976,7 +1976,7 @@
  janissary_decadence_trigger:0 "§Yイェニチェリ§!の補正を取得してから100年が経過しました。"
  janissary_disaster_notifier:2 "§Y大航海時代§!より後の時代では§Yイェニチェリ軍団§!の国難が発生するかもしれません"
  disband_the_janissaries_title:1 "イェニチェリは検査を受ける"
- disband_the_janissaries_desc:1 "イェニチェリの給与者名簿の中には本当はイェニチェリでない者や本当は軍務には適さない者がたくさんいる。 誰をまだ名簿に残さなければならないのかの一般的な見直しを受けさせ、この残った一団に秩序と鍛錬をもたらすようにしよう。"
+ disband_the_janissaries_desc:1 "イェニチェリの給与者名簿の中には、本当はイェニチェリでない者や本当は軍務には適さない者が多数いる。誰をまだ名簿に残すべきか総点検を強制し、この一団に秩序と鍛錬をもたらすようにしよう。"
  yoklama_effect_tooltip:0 "§Rイェニチェリはこの決断を認められず、幾らかはこの決定によって反乱を起こすだろう。§!"
  flavor_tur.EVTNAME110:0 "イェニチェリの反乱"
  flavor_tur.EVTDESC110:0 "強力なイェニチェリは、国を西洋化しようとしている最近の試みに対して怒っている。彼らの反乱が成功すれば、彼らは最近の西洋化の変化を巻き戻すだろう。"
@@ -2745,7 +2745,7 @@
  flavor_hol.EVTDESC3509:0 "1598年4月13日、フランスのアンリ4世は、ユグノーに宗教的および市民的権利の多くを付与したナントの勅令という新しい法律を発表した。ほぼ100年後、彼の孫であるルイ14世は、領域内の統一と安定を目指して、2つの教会の共存を潜在的な障害とみなしている。プロテスタントの迫害と教会の焼き打ちをすでに許していた彼は、1685年にナントの勅令を取り消した。数年のうちに40万人以上のユグノー人がイングランド、プロイセン、オランダ、アメリカに移住し、フランスから最も勤勉な商業階級が奪われることになった。"
  flavor_hol.EVTOPTA3509:0 "我々は両手を広げてあなた方を歓迎する。"
  flavor_hol.EVTNAME3513:0 "総督職はオラニエ家の世襲となる"
- flavor_hol.EVTDESC3513:0 "ウィレム3世は、オランダの人々の間でオラニエ家への支持が高まる中で、ウィット兄弟を失墜させ、オランダの政治の最前線に立った。総督の地位となった後、ウィット兄弟は辞任し、大逆と反オラニエ的な思想のため、乱暴な暴徒たちによって殺害された。彼らの支持の高まりにより、 1674年8月、オラニエ家のオランダ及びゼーラントの州の総督職の世襲が宣言された。"
+ flavor_hol.EVTDESC3513:0 "ウィレム3世はオランダの人々の間でオラニエ家への支持が高まる中で、ウィット兄弟を失墜させ、オランダの政治の最前線に立った。総督の地位となった後、ウィット兄弟は辞任し、大逆と反オラニエ的な思想のため、乱暴な暴徒たちによって殺害された。彼らの支持の高まりにより、1674年8月、オラニエ家のオランダ及びゼーラントの州の総督職の世襲が宣言された。"
  flavor_hol.EVTOPTA3513:0 "うむ、我々には秩序が必要だ！"
  flavor_hol.EVTOPTB3513:0 "いや、我々には自由が必要だ！"
  flavor_hol.EVTNAME3515:0 "オランダの革命"
@@ -3982,7 +3982,7 @@
  flavor_hab.15.d:0 "今や単一の個人に頼るのではなく、スパイ活動を実施する機関がますます増えている。ヨーロッパ中で、外国と国内の間の書状の調達、開封、解読を任されたブラック・チェンバーが密かに設立された。\nしかし、ウィーンのブラック・チェンバーである枢密内閣書記局は普通では無かった。事情通たちにとって、ウィーンのブラック・チェンバーは手にし得たすべての書状をきちんと開封し、コピーしてから解読し翻訳するのが速いことで有名だった。"
  flavor_hab.15.a:0 "OK"
  flavor_hab.16.t:0 "メルヒオール・クレスル"
- flavor_hab.16.d:0 "彼自身プロテスタントの両親の息子であるメルヒオール・クレスルは、プロテスタントを聖なるカトリック教会に改宗させる印象的な能力を持っているようだ。 クレスルはどこに派遣されても、改革は後退し、 クレスルは新しい改革派都市に移り、再びカトリック化するだろう。  クレスルは対抗宗教改革を生涯の仕事とするつもりであり、身の危険があっても活動を継続するだろう。"
+ flavor_hab.16.d:0 "彼自身プロテスタントの両親の息子であるメルヒオール・クレスルは、プロテスタントを聖なるカトリック教会に改宗させる印象的な能力を持っているようだ。クレスルはどこに派遣されても、改革は後退し、クレスルは新しい改革派都市に移り、再びカトリック化するだろう。クレスルは対抗宗教改革を生涯の仕事とするつもりであり、身の危険があっても活動を継続するだろう。"
  flavor_hab.16.a:0 "我々は秘密評議会でこの男を必要としている。"
  flavor_hab.16.b:0 "それは朗報だが、我々は彼の業務に彼をとどめておく必要はない。"
  flavor_hab.17.t:0 "ミュールフィアテルの織物生産"
@@ -4299,7 +4299,7 @@
  gua_yerba_mate:0 "イェルバ・マテ"
  desc_gua_yerba_mate:0 "イェルバ・マテはマテ茶のための葉が取れる植物である。それは「神の飲み物」または「友情の飲み物」と呼ばれ、干ばつや飢饉の時に多くの命を救った。"
  gua_yerba_mate_production:0 "イェルバ・マテの輸出"
- desc_gua_yerba_mate_production:0 "イェルバ・マテの需要と輸出は生産を増やしている。 マテ茶は「神の飲み物」または「友情の飲み物」と呼ばれ、干ばつや飢饉の時に多くの命を救った。"
+ desc_gua_yerba_mate_production:0 "イェルバ・マテの需要と輸出は生産を増やしている。マテ茶は「神の飲み物」または「友情の飲み物」と呼ばれ、干ばつや飢饉の時に多くの命を救った。"
  flavor_gua.5.t:0 "ネキュ"
  flavor_gua.5.d:0 "我々の指導者の一人のネキュは、ロケ・ゴンザレス、ジョアン・デ・カスティリョ、アフォンソ・ロドリゲスの3名のイエズス会宣教師の虐殺を命じた。 彼らは部族の人々や他の人々をカトリックに改宗しようとしていた！"
  flavor_gua.5.a:0 "彼らの首を刎ねろ！"
