--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -473,7 +473,7 @@
  flavor_kor.3.desc_new:2 "[GetDateText]年の宮廷での宴会の中で、儀礼大臣の李世佐は[Root.Monarch.GetTitle]の礼服に酒をこぼしてしまいました。激しい派閥争いや王権批判の後に起こった出来事でしたので、李世佐の反対派はそれを主権者に対する犯罪、すなわち反逆を示す出来事だと即座に解釈しました。彼らは、派閥を超えて李世佐とその多くの同胞たちの配流を要求しています。これは本当に王権を疑問視する勢力を排除するまたとない機会です。"
  flavor_kor.3.A:0 "我に反対する者は全員追放せよ。"
  flavor_kor.3.B:0 "政治的均衡を維持せねば。"
- flavor_kor.4.desc_new:0 "宋明理学の改革者である趙光祖は、儒教の理念に従って政府を形作ろうとしました。しかし、改革の初期の成功は、両班の旧体制を攻撃し、宋明理学の優位を確保することで彼らの持つ権力を弱体化させ、土地の没収を提案して彼らを怒らせたことで裏目に出たようです。\n\n両班は今、趙光祖は自身が王となろうとしている反逆者であり、 彼の改革は間違っていて、社会と国家の根幹に害をなすと主張しています。趙光祖は、反対があってでも、急いで改革を継続することが唯一の正しい行動方針であると主張しています。誰の味方をすべきでしょうか？"
+ flavor_kor.4.desc_new:0 "宋明理学の改革者である趙光祖は、儒教の理念に従って政府を形作ろうとしました。しかし、改革の初期の成功は、両班の旧体制を攻撃し、宋明理学の優位を確保することで彼らの持つ権力を弱体化させ、土地の没収を提案して彼らを怒らせたことで裏目に出たようです。\n\n両班は今、趙光祖は自身が王となろうとしている反逆者であり、彼の改革は間違っていて、社会と国家の根幹に害をなすと主張しています。趙光祖は反対があってでも、急いで改革を継続することが唯一の正しい行動方針であると主張しています。誰の味方をすべきでしょうか？"
  flavor_kor.4.A:0 "宋明理学者を追放せよ!"
  flavor_kor.4.B:0 "改革は継続せねば－どんなことがあろうとも!"
  flavor_kor.8.t:0 "朝鮮での農民蜂起"
