--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -455,7 +455,7 @@
  dlc027_reason_generic_europe_reason:1 "\n三十年戦争及びナポレオン戦争の舞台となる§Yヨーロッパ§!の国家を選択しているため、このDLCを推奨します。"
  dlc027_reason_french_revolution:0 "「§YArt of War Expansion§!」はヨーロッパの大部分を荒廃させた三十年戦争、さらなる外交オプションとゲームプレイの強化に加え、ナポレオン戦争をシミュレートする革命目標の機能を追加します。"
  dlc027_reason_french_revolution_reason:1 "\n革命の発祥地である§Yフランス§!を選択しているため、このDLCを推奨します。"
- dlc027_reason_hre:0 "「§YArt of War Expansion§!」はナポレオン戦争向けの特別なシステムやイベント、さらなる外交オプションとゲームプレイの強化に加え、 §Y神聖ローマ帝国§!の公式な信仰を決定するため、三十年戦争を戦うことを可能とする宗教連盟を追加します。"
+ dlc027_reason_hre:0 "§YArt of War Expansion§!はナポレオン戦争向けの特別なシステムやイベント、さらなる外交オプションとゲームプレイの強化に加え、§Y神聖ローマ帝国§!の公式な信仰を決定するため、三十年戦争を戦うことを可能とする宗教連盟を追加します。"
  dlc027_reason_hre_reason:1 "\n三十年戦争の舞台となる§Y神聖ローマ帝国§!内の国家を選択しているため、このDLCを推奨します。"
  dlc027_reason_sweden_reason:1 "\n三十年戦争の主要国家である§Yスウェーデン§!を選択しているため、このDLCを推奨します。"
  dlc028_reason_member_of_evangelical_union:0 "「§YEvangelical Union Unit Pack§!」は史実において三十年戦争で§Y福音同盟§!に加わった国家に、12種類の新しいユニットモデルを追加します。"
@@ -464,7 +464,7 @@
  dlc031_reason_generic:0 "「§YGuns, Drums and Steel Music Pack§!」はEuropa Universalisがカバーする歴史テーマやイベントからインスピレーションを得た5種類の新しいメタルソングを追加します。"
  dlc033_reason_aztec:0 "「§YEl Dorado Expansion§!」は花戦争の開戦事由と多くのフレーバーイベントに加え、§Yナワトル§!信仰に破滅と宗教の改革システムを追加します。"
  dlc033_reason_aztec_reason:1 "\n§Yナワトル§!信仰の国家を選択しているため、このDLCを推奨します。"
- dlc033_reason_maya:0 "「§YEl Dorado Expansion§!」は新世界の原住民と植民者双方向けのさらなる機能に加え、 §Yマヤ§!信仰に宗教の改革システムとフレーバーイベントを追加します。"
+ dlc033_reason_maya:0 "§YEl Dorado Expansion§!は新世界の原住民と植民者双方向けのさらなる機能に加え、§Yマヤ§!信仰に宗教の改革システムとフレーバーイベントを追加します。"
  dlc033_reason_maya_reason:1 "\n§Yマヤ§!信仰の国家を選択しているため、このDLCを推奨します。"
  dlc033_reason_inca:0 "「§YEl Dorado Expansion§!」は新世界の原住民と植民者双方向けのさらなる機能に加え、§Yインティ§!信仰に宗教の権威と改革、フレーバーイベントを追加します。"
  dlc033_reason_inca_reason:1 "\n§Yインティ§!信仰の国家を選択しているため、このDLCを推奨します。"
@@ -490,7 +490,7 @@
  dlc039_reason_free_city:0 "「§YCommon Sense Expansion§!」は§Y神聖ローマ帝国§!に自由都市のシステムを追加します。十分に発展している小国には自由都市の地位を付与することが可能で、彼らには独自のボーナスとペナルティのセットが与えられます。"
  dlc039_reason_free_city_reason:1 "\n§Y神聖ローマ帝国§!の§Y自由都市§!を選択しているため、このDLCを推奨します。"
  dlc039_reason_hre_reason:1 "\n§Y神聖ローマ帝国§!内の国家を選択しているため、このDLCを推奨します。"
- dlc040_reason_christian_theocracy:0 "「§YTheocracies Unit Pack§!」は§Yリヴォニア騎士団、チュートン騎士団§!その他の§Y騎士団§!、 §Y教皇領§!等の多くの§Yキリスト教の神権制§!国家向けに16種類の新しいユニットモデルを追加します。"
+ dlc040_reason_christian_theocracy:0 "§YTheocracies Unit Pack§!は§Yリヴォニア騎士団、チュートン騎士団§!その他の§Y騎士団§!、§Y教皇領§!等の多くの§Yキリスト教の神権制§!国家向けに16種類の新しいユニットモデルを追加します。"
  dlc040_reason_christian_theocracy_reason:1 "\n§Yキリスト教の神権国家§!を選択しているため、このユニットパックを推奨します。"
  dlc041_reason_buddhists:1 "「§YBuddhists Unit Pack§!」 は§Yチベット§!、§Yラーンサーン§!、§Yキャンディ§!と§Y大越§!等の多くの§Yアジアの仏教国§!向けに、16種類の新しいユニットモデルを追加します。"
  dlc041_reason_buddhists_reason:1 "\n§Y仏教§!国を選択しているため、このユニットパックを推奨します。"
