Save/Update files

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -650,7 +650,7 @@
  catholic_flavor.8.a:0 "彼はおそらく異端者だな"
  catholic_flavor.8.b:0 "申し訳ないが、死んだ愛する者のためにできることは何もない"
  catholic_flavor.9.t:0 "信仰の新しい告白"
- catholic_flavor.9.d:0 "改革派は、カトリックの教えとの差異が軽微ではあるが、依然として深刻な差異を持つ新たな信仰告白を提唱している。教会は異端者に国境を接していると主張しているが、教会とその統治機構を厳重に管理することを提案する人々もいる。"
+ catholic_flavor.9.d:0 "改革派は、カトリックの教えと異なる、軽微だが重大な差異が何点かある新たな信仰告白を提唱している。これはほとんど異端に近いと教会は主張しているが、この件を利用して教会とその統治機構をより厳重な管理下に置くべきと提言する者たちもいる。"
  catholic_flavor.9.a:0 "それを促進しよう"
  catholic_flavor.9.b:0 "いや、誰もがいまいましい"
  catholic_flavor.10.t:0 "安全な通行の約束？"
