--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -2073,7 +2073,7 @@
  composite_monarchy_desc:0 "複合君主制は、一つの王冠の下で統一しているにもかかわらず、それぞれの法的規範と伝統によって統治される異なる部分を含んだ王国に対する専門用語である。 アンジュー帝国の領土について、これ以上に適切な語句があるだろうか？かつて、一族はアンジューからアルバニアまでの土地を統治しなければならなかった。今日、我々の手の届く範囲はやや狭いかもしれないが、ロレーヌ公爵、バル公爵、アンジュー公爵、そしてプロヴァンス伯爵の義務は、それらのすべての称号が同じ人物によって保持されている場合でさえも、かなり異なっている。さまざまな領土を一つの共通の目標に対して柔軟に対応させることで、我々は国民をなだめ、その部分の合計よりはるかに偉大な全体を形成する。"
  tarascon_castle:0 "タラスコンの城"
  tarascon_castle_desc:0 "善良王ルネによって1449年に完成したこの要塞は、すべてのキリスト教世界で最も強力なものの一つであり、当時の軍事建築の最も優れた例の一つである。要塞、武器庫、刑務所、または気晴らしを必要とする支配者の休養のためのシャトーとしてそれを利用しよう。"
- public_weal:0 "公共の福祉"
+ public_weal:0 "公益"
  public_weal_desc:0 "我々はパリのヴァロワ家の臣下ではない。しかし、時に、我々はパリが我々の古い特権を忘れてしまったことを感じている。おそらく、我々が他の貴族たちと共にパリの支配から脱出しようとする共通の主張を作り上げることで、我々は特権を保持するのに必要な数の力を見出すだろう。"
  toulon_dockyard:0 "トゥーロンの造船所"
  toulon_dockyard_desc:0 "我々の土地は天然の地中海の港である。古代ギリシャ人はマルセイユの価値を、彼らが記憶の黎明期において、マッサリアの名の下で定住したときに認識した。マルセイユは偉大な商業拠点であり続けることができるが、トゥーロンは我々の偉大な国家のための造船所、海軍兵器庫、艦隊の基地として最適な場所となるだろう。"
