--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4667,7 +4667,7 @@
  flavor_daimyo.26.d:0 "時が経つにつれ、我々の世界の花を咲かせたのは、[Root.Monarch.GetName]の経済的かつ政治的な誇りであることがすべて明らかとなった。[Root.Monarch.GetHerHis]の王国統治の再編成と、[Root.Monarch.GetHerHis]の外国人の交易業者を誘致するための努力と、統一王国のための新しい官僚制の創設は、[Root.Monarch.GetHerHim]に我々の首都を拡大し、寺院、宮殿、記念碑の建設を監督することを可能にした。"
  flavor_daimyo.26.a:0 "これは真に我々の王国のための黄金時代だ。"
  flavor_byz.1.t:0 "ヴェネチアの破壊と略奪"
- flavor_byz.1.d:0 "ビザンツ軍は、十字軍の伝説の裏切りに復讐することを熱望しており、ヴェネツィアのかつては偉大だった都市の襲撃を憐れむ者は一人もいない。帝国将軍の使命は常に明白であり、すべての貴族の財産と栄誉を剥奪し、世界中の羨望の都市から盗まれた財宝は返還されなければならない。\n\n水の都にビザンツ軍隊が襲来したとき、物事は誰も想像できないほどには恐ろしいことになった。 戦争の中で誰もが慈悲を抱けるわけではなく、指揮官たちは焼ける都市を見ることに熱狂している、ビザンツ兵は、数日間もの間破壊と略奪に勤しみ、その範囲は、教会、宮殿、さらにはヴェネツィアの武器庫にまで及んだ。"
+ flavor_byz.1.d:0 "ビザンツ軍は、十字軍の伝説の裏切りに復讐することを熱望しており、ヴェネツィアのかつては偉大だった都市の襲撃を憐れむ者は一人もいない。帝国将軍の使命は常に明白であり、すべての貴族の財産と栄誉を剥奪し、世界中の羨望の都市から盗まれた財宝は返還されなければならない。\n\n水の都にビザンツ軍が襲来したとき、物事は誰も想像できないほど恐ろしいことになった。戦争の中で誰もが慈悲を抱けるわけではなく、指揮官たちは焼ける都市を見ることに熱狂し、ビザンツ兵は、数日間もの間破壊と略奪に勤しみ、その範囲は、教会、宮殿、さらにはヴェネツィアの武器庫にまで及んだ。"
  flavor_byz.1.a:0 "運命を恨む。"
  flavor_rus.EVTNAME2000:0 "デカブリストの革命"
  flavor_rus.EVTDESC2000:0 "革命！専制支配体制は倒され、ツァーリはペトロ聖堂にて首をはねられた。新しいロシアを、革命的なロシアを作るときだ！\n\n新しい体制の指導者は、以前抑圧に立ち向かい、ツァーリへの反乱を率いた帝国陸軍の将校のグループである秘密組織、救済同盟によって構成される。パーヴェル・ペステリは同盟の思想の中核をなし、ミハイル・ルニンとニキータ・ムラヴィヨフは最前線で率いていた。同盟の名目上の指導者であるセルゲイ・トルベツコイは健康不良のため、最近ロシアに戻ったばかりだ。それぞれは、新たなロシア国家の統率を目指して努力している。\n\nこの革命政府は農奴制を廃止すること、法の下の平等を確立すること、そして国家と小作農との間で抑圧的な貴族の土地を再分配することを目指している。政治的自由主義の強力な基盤により、この革命は世界中の専制政治に対し挑戦するというゆるぎない決意をおし進めている。"
@@ -4693,7 +4693,7 @@
  flavor_dlh.5.b:1 "シルヒンドの統治者としてローディー族に完全な独立を与えよ。\n"
  flavor_dlh.5.b.tt:1 "もし、シルヒンドが受け入れれば、彼らは独立します。"
  flavor_dlh.6.t:0 "[Root.Monarch.GetName]の立身"
- flavor_dlh.6.d:0 "パンジャーブの統治者として、またデリー・サイイド朝の最後の支援者として、[Root.Monarch.GetName] は北インドでもっとも影響力をもつ支配者です。また、[Root.Monarch.GetSheHeCap] はスルタン国における大半のアフガン貴族の非公式のリーダーに浮かび上がっており、多くの人間が [Root.Monarch.GetHerHim] がデリーのスルタン [DLH.Monarch.GetHerselfHimself] よりも力を持っていると考えています。\nそのため、[Root.Monarch.GetName] がデリーのスルタンの無能ぶりを嫌悪とともに見ていたとしても不思議ではありません。"
+ flavor_dlh.6.d:0 "パンジャーブの統治者として、またデリー・サイイド朝の最後の支援者として、[Root.Monarch.GetName] は北インドでもっとも影響力をもつ支配者です。また、[Root.Monarch.GetSheHeCap]はスルタン国における大半のアフガン貴族の非公式のリーダーに浮かび上がっており、多くの人間が[Root.Monarch.GetHerHim]がデリーのスルタン自身よりも力を持っていると考えています。\nそのため、[Root.Monarch.GetName] がデリーのスルタンの無能ぶりを嫌悪とともに見ていたとしても不思議ではありません。"
  flavor_dlh.6.a:0 "サイイド朝から出る時だ！"
  flavor_dlh.6.b:0 "ローディー族は依然忠実な臣民であろう。"
  flavor_dlh.7.t:0 "[Root.Monarch.GetName]の立身"
