Save/Update files

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3317,7 +3317,7 @@
  EVTOPTB9458:0 "我々の文化的成果を自慢する。"
  EVTOPTC9458:0 "単純に一日を楽しむ。"
  EVTNAME9459:0 "狩猟での事故"
- EVTDESC9459:0 "$HEIR_CAP_ADJ$の体は、出かけた時に着ていた白い服が今では$HEIR_ADJ$の血で真っ赤に染まっていた。誰がやったのか、あなたは知る由もない。$HEIR_S_PRONOUN$は森の空き地で$HEIR_ADJ$の馬と一緒に発見されたらしい。その場所はあなたも知っていた。$HEIR_CAP_ADJ$の顔は落ち着いていて、穏やかだった。あなたは$HEIR_O_PRONOUN$に手を伸ばした。ようやくこの状況が鮮明に、現実として理解できた。その肌の冷たさは･･･死なのだと。"
+ EVTDESC9459:0 "$HEIR_CAP_ADJ$が出かける時に身にまとっていた白い服は、今では$HEIR_ADJ$の血で真っ赤に染まっていた。誰がやったのか、あなたは知る由もない。$HEIR_S_PRONOUN$は森の空き地で$HEIR_ADJ$の馬と一緒に発見されたらしい。その場所はあなたも知っていた。$HEIR_CAP_ADJ$の顔は落ち着いていて、穏やかだった。あなたは$HEIR_O_PRONOUN$に手を伸ばした。ようやくこの状況が鮮明に、現実として理解できた。その肌の冷たさは･･･死なのだと。"
  EVTOPTA9459:0 "悲しみが襲う。"
  EVTOPTB9459:0 "しかたがない･･･"
  EVTNAME9460:0 "家族の秘密？"
