--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -5525,7 +5525,7 @@
  alh_entrepot_of_india:0 "インドの集積地"
  alh_entrepot_of_india_desc:0 "真珠採取は我々の港を有名にしているが、馬の交易はおそらくインドから最も多くの船を我々の海岸へともたらすものだろう。アラビアの馬は南アジアやイランで需要が高く、この商品の海上交易の主要な源流はハサーの港である。砂漠の部族は、我々が絶えずインドの最高の戦場に送る、素晴らしい戦争用の馬を安定して供給している。"
  alh_a_modern_navy:0 "近代的な海軍"
- alh_a_modern_navy_desc:0 "最近、ペルシア湾では我々船と港を脅かしているキリスト教徒の船が増えている。しかし、この新しい敵と戦うためには、我々は新しい近代的な海軍を構築する必要がある。すでに海岸でキリスト教徒と戦った人々から学び、トルコの造船工や船員に我が国に定住するよう招待しよう。"
+ alh_a_modern_navy_desc:0 "最近、ペルシア湾では我々の船と港を脅かすキリスト教徒の船が増えている。しかし、この新しい敵と戦うためには、我々は新しい近代的な海軍を構築する必要がある。すでに海岸でキリスト教徒と戦った人々から学び、トルコの造船工や船員が我が国に定住するよう招待しよう。"
  alh_legacy_of_rahmah_ibn_jabir:0 "ラフマン・イブン・ジャービルの遺産"
  alh_legacy_of_rahmah_ibn_jabir_desc:0 "我々のような国家では航路の指揮をとることが非常に重要である。彼らは大部分の船長をはるかに超えた経験と能力を持ち、誰よりも優れた海域を知っているため、我々は老練な船乗りや海賊を雇う形態を躊躇してはならない。"
  HDR_ideas:0 "ハドラマウトのアイデア"
