Save/Update files

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -56,7 +56,7 @@
  EXCELLENTMINISTER:0 "優秀な大臣だ！"
  oman_aggressive_trade:0 "積極的な交易"
  flavor_oma.1.t:0 "権力闘争"
- flavor_oma.1.d:0 "ナブハーニ朝は3世紀にわたって権力を保持していたが、15世紀に入って、選ばれたイマーン達によってその権威に疑問符が付き始めていた。この闘争は王朝が国全体の統制を失うまで続けられた。"
+ flavor_oma.1.d:0 "ナブハーニ朝は3世紀にわたって権力を保持していたが、15世紀に入って、選ばれたイマームたちによってその権威に疑問符が付き始めていた。この闘争は王朝が国全体の統制を失うまで続けられた。"
  flavor_oma.1.a:0 "イマーンに従う"
  flavor_oma.1.b:0 "$MONARCHTITLE$がオマーンを支配する！"
  flavor_oma.2.t:0 "ポルトガルの到来！"
@@ -456,7 +456,7 @@
  flavor_hun.25.a.tt:0 "王領ハンガリーの新しい州は全て、以下の補正を受けます："
  flavor_hun.25.b:0 "ハンガリーとオーストリアは一人の統治者の下に別々の王位となります。"
  flavor_hun.26.t:0 "ヴァラコラム法"
- flavor_hun.26.d:0 "オスマン帝国の進歩は南東ヨーロッパの政治的地図を完全に変え、多くのスラヴ人やルーマニア人は古い故郷を残して、我々の[Root.GovernmentName]の国境地域に移住しようとしている。これらの人々は故郷を取り戻すことを熱望しており、おそらく荒々しい兵士や非正規の戦士たちとなることができるだろう。彼らの宗教的、文化的自由を保証しようとすれば、国境地帯は手に負えないことになるかもしれないが、オスマンを嫌っている民衆を、我々はうまく奉仕させることができる。"
+ flavor_hun.26.d:0 "オスマン帝国の前進は南東ヨーロッパの政治的地図を完全に変え、多くのスラヴ人やルーマニア人は古い故郷を残して、我々の[Root.GovernmentName]の国境地域に移住しようとしている。これらの人々は故郷を取り戻すことを熱望しており、おそらく荒々しい兵士や非正規の戦士たちとなることができるだろう。彼らの宗教的、文化的自由を保証しようとすれば、国境地帯は手に負えないことになるかもしれないが、オスマンを嫌っている民衆を、我々はうまく奉仕させることができる。"
  flavor_hun.26.a:0 "我々は彼らの権利を保証しよう！"
  flavor_hun.26.b:0 "いや、法と秩序が守られなければならない。"
  flavor_hun.27.t:0 "ルーマニア人の反乱"
@@ -744,7 +744,7 @@
  flavor_eng.EVTOPTA9141:0 "戦争の言い訳としてそれを利用する。"
  flavor_eng.EVTOPTB9141:0 "我々の関係があまりひどくならないようにしよう。"
  flavor_eng.EVTNAME9143:0 "ジャコバイトの反乱"
- flavor_eng.EVTDESC9143:0 "1745年、オーストリア継承戦争がヨーロッパで猛威を振るっていた。イングランドはオーストリア領の南オランダで大勢の兵士を忙しくさせていた。チャールズ・エドワード・スチュアート（1720-1788）がスコットランドに大胆に上陸するのに機は熟していると思われた。彼と彼のジャコバイト支持者は1745年10月2日にプレストンパンツで英国軍を倒し、エディンバラに入り、そこで彼は父ジェームズをスコットランドの王として認めさせた。小規模軍の指揮官として、彼はダービーまでイングランドに侵攻したが、約束されたフランスの支援は実現しなかった（フランス軍の上陸は失敗した）時、退却しなければならなかった。カンバーランド公（北海沿岸の低地帯諸国から呼び出された）が率いる英国軍に追いつかれ、1746年4月16日にカロデンで敗れた。これはスチュアートが王座を取り戻すために得た最大限の試みであったが、気の早い若い王子は将軍の冷静なアドバイスを聞いていなかったので、かくしてスチュアートの王権への主張は永遠に埋没することとなった。"
+ flavor_eng.EVTDESC9143:0 "1745年、オーストリア継承戦争がヨーロッパで猛威を振るっていた。イングランドはオーストリア領の南オランダで大勢の兵士を忙しくさせていた。チャールズ・エドワード・スチュアート（1720-1788）がスコットランドに大胆に上陸するのに機は熟していると思われた。彼と彼のジャコバイト支持者は1745年10月2日にプレストンパンツで英国軍を倒し、エディンバラに入り、そこで彼は父ジェームズをスコットランドの王として認めさせた。小規模軍の指揮官として、彼はダービーまでイングランドに侵攻したが、約束されたフランスの支援が実現しなかった（フランス軍の上陸は失敗した）時、退却しなければならなかった。カンバーランド公（北海沿岸の低地帯諸国から呼び出された）が率いる英国軍に追いつかれ、1746年4月16日にカロデンで敗れた。これはスチュアートが王座を取り戻すために得た最大限の試みであったが、気の早い若い王子は将軍の冷静なアドバイスを聞いていなかったので、かくしてスチュアートの王権への主張は永遠に埋没することとなった。"
  flavor_eng.EVTOPTA9143:0 "我々は彼らを粉砕するだろう！"
  flavor_eng.EVTOPTB9143:0 "スチュアートは王位を取り戻す！"
  flavor_eng.EVTNAME9144:0 "大ウィリアム・ピット"
@@ -1762,7 +1762,7 @@
  flavor_fra.EVTNAME5004:0 "ヴォーバン"
  flavor_fra.EVTDESC5004:0 "セバスティアン・ル・プレストル・ド・ヴォーバンは、フランスの軍事技術者であり、包囲技術と防御要塞の技術に革命をもたらした。彼はルイ14世の治世（1643-1715）におけるフランスの戦争のすべてで戦い、数多くの要塞を再設計し改良する国境周遊視察を頻繁に行った。バイエルンのランダウの要塞化のための彼の設計は、しばしば、彼の最も偉大な作品として考えられている。"
  flavor_fra.EVTNAME3144:0 "三部会"
- flavor_fra.EVTDESC3144:0 "1783年のヴェルサイユ条約は、フランスの成功と以前の敗北からの復讐であった。しかし、財政問題を緩和するための努力は何もなされず、むしろ負債による負担は増大した。アメリカの独立運動の成功はまた、体制への批判を強めた。イングランドとの1786年の商業条約は、国内の産業生産の急激を生じさせ、凶作の結果としての厳しい飢饉、不穏、そしてついに1788年の国家の破産へと至った。王は1626年以来功績のなかった三部会を再び召集することを余儀なくされた。1789年5月5日、ヴェルサイユで三部会が招集され、すぐに自身を国民議会だと宣言（6月17日）し、憲法が作られるまでは留まることを誓った。ルイ16世はこの状況の変化を認めたが、彼の人気のある財務長官であったネッケルの解任と郊外への軍隊の集結は、1789年7月14日にパリの大衆が国家の監獄であったバスティーユを襲撃することを促す結果となった。フランス革命の火蓋が切られた。"
+ flavor_fra.EVTDESC3144:0 "1783年のヴェルサイユ条約は、フランスの成功と以前の敗北からの復讐であった。しかし、財政問題を緩和するための努力は何もなされず、むしろ負債による負担は増大した。アメリカの独立運動の成功はまた、体制への批判を強めた。イングランドとの1786年の商業条約は、国内の産業生産の急減を生じさせ、凶作の結果としての厳しい飢饉、不穏、そしてついに1788年の国家の破産へと至った。王は1626年以来功績のなかった三部会を再び召集することを余儀なくされた。1789年5月5日、ヴェルサイユで三部会が招集され、すぐに自身を国民議会だと宣言（6月17日）し、憲法が作られるまでは留まることを誓った。ルイ16世はこの状況の変化を認めたが、彼の人気のある財務長官であったネッケルの解任と郊外への軍隊の集結は、1789年7月14日にパリの大衆が国家の監獄であったバスティーユを襲撃することを促す結果となった。フランス革命の火蓋が切られた。"
  flavor_fra.EVTOPTA3144:0 "経済と社会を改革する。"
  flavor_fra.EVTOPTB3144:0 "経済改革を行うが、社会は変えない。"
  flavor_fra.EVTOPTC3144:0 "改革はしない！"
@@ -1970,7 +1970,7 @@
  janissary_decadence.7.a:0 "我々は彼らを引き渡さざるを得ない。"
  janissary_decadence.7.b:0 "これらの要求を拒否する！"
  janissary_decadence.100.t:0 "検査"
- janissary_decadence.100.d:0 "イェニチェリ全員の名簿の全てを検査させることで、[Root.Monarch.GetName]は最終的に何とかこの軍団を再び支配することができた。全ての悪い要素と非戦闘員は組織から取り除かれ、国からの報酬やイェニチェリであることで付随する地位はもはや受け取れないだろう。これは以前のイェニチェリが軽々しく扱ったものではないが、[Root.Monarch.GetTitle]はこれらの措置を実行する権限を持っている。一部は以前の君主に対して戦いを始めている。"
+ janissary_decadence.100.d:0 "イェニチェリ全員の名簿の全てを検査させることで、[Root.Monarch.GetName]は最終的に何とかこの軍団を再び支配することができた。全ての悪い要素と非戦闘員は組織から取り除かれ、国からの報酬やイェニチェリであることで付随する地位はもはや受け取れないだろう。これはかつてのイェニチェリを軽々しく扱うものではないが、[Root.Monarch.GetTitle]はこれらの措置を実行する権限を持っている。一部はかつての君主に対して戦いを始めている。"
  janissary_decadence.100.da:0 "イェニチェリ全員の名簿の全てを検査させることで、[Root.Monarch.GetName]は最終的に何とかこの軍団を再び支配することができた。全ての悪い要素と非戦闘員は組織から取り除かれ、国からの報酬やイェニチェリであることで付随する地位はもはや受け取れないだろう。"
  janissary_decadence.100.a:0 "選択の余地はないだろう。"
  janissary_decadence_trigger:0 "§Yイェニチェリ§!の補正を取得してから100年が経過しました。"
