--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1352,7 +1352,7 @@
  EVTOPTA5062:0 "我々の研究は人口増加の利益を生む。"
  EVTOPTB5062:0 "まだ改善の余地がある。"
  EVTNAME5063:0 "貴族の確執"
- EVTDESC5063:0 "国家の主要な一族の間の暴力は決して表に現れていないわけではない。多くの場合、この不安定さは、紛争へと発展するだろう。結果は本格的な内戦ではないとしても、国家の安定度を大きく乱すだろう。"
+ EVTDESC5063:0 "国家の主要な一族の間の暴力は決して表に現れていないわけではない。多くの場合、この不安定さは、紛争へと発展するだろう。結果が本格的な内戦ではないとしても、国家の安定度を大きく乱すだろう。"
  EVTOPTA5063:0 "一方に味方する。"
  EVTOPTB5063:0 "彼らと決着をつけよう。"
  EVTOPTC5063:0 "問題の解決を試みる。"
@@ -2672,7 +2672,7 @@
  EVTOPTA6601:0 "革命万歳"
  EVTNAME6602:0 "革命を守る"
  EVTDESC6602:0 "反動勢力は、我々の革命政府がヨーロッパの家族の一人とみなされることを受け入れるのを拒むだけではなく、革命を他の貧しい国に広めるための我々の明示的な権利さえも否定する。人々は革命を支持するために集まっている。"
- EVTOPTA6602:0 "我々は戦わなければならない。"
+ EVTOPTA6602:0 "戦わなければ。"
  EVTNAME6603:0 "革命は抑圧されなければならない"
  EVTDESC6603:0 "邪悪な革命政府は、封建的義務を排除し、聖職者に課税し、貴族を斬ったりするような卑劣なことをしているだけでなく、革命的な教義を他の国にも輸出している。我々の領土にいる正しい人たちは、偉大な敵との闘いにおいて、我々の神に任命された君主の支援のために集まっている。"
  EVTOPTA6603:0 "我々の負けだ"
