--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -586,7 +586,7 @@
  shinto_events.13.b:0 "忠実な人たちの強い信念に対して何かをするのは困難だ。"
  shinto_events.13.c:0 "貧しい人々に力を与えるものに対して、我々は強く制限しよう。"
  shinto_events.14.t:0 "寺内町"
- shinto_events.14.d:0 "忠実な一向一揆の社会は、領土の主要な仏教寺院周辺の小さな町へと成長し始めた。これらの都市は精神的な意味だけでなく、彼らは身分の低い地主の武士から武装した農民や僧まであらゆる者たちで構成された防衛軍を率いている。一向一揆は、幕府のみならず周辺の土地を支配する大名対しても並立する権威である。\nそのような自治体の一つが、[ikko_province.GetName]の寺院の周りに生じており、我々は彼らから恩恵を受ける可能性もあるが、この強力な宗教的情熱、武器、自治の組み合わせは、大名の権威に対する脅威となっている。"
+ shinto_events.14.d:0 "忠実な一向一揆の社会は、領土の主要な仏教寺院周辺の小さな町へと成長し始めた。これらの都市は精神的な意味だけでなく、彼らは身分の低い地主の武士から武装した農民や僧まであらゆる者たちで構成された防衛軍を率いている。一向一揆は、幕府のみならず周辺の土地を支配する大名に対しても並立する権威である。\nそのような自治体の一つが、[ikko_province.GetName]の寺院の周りに生じており、我々は彼らから恩恵を受ける可能性もあるが、この強力な宗教的情熱、武器、自治の組み合わせは、大名の権威に対する脅威となっている。"
  shinto_events.14.a:0 "我々はこの危険な状況を切り落とさなければならない。"
  shinto_events.14.b:0 "これらの忠実な軍隊と共に働くよう努めよう。"
  shinto_events.14.c:0 "建設される多くの寺内町を承認する。"
@@ -810,7 +810,6 @@
  GOLDEN_ERA:0 "黄金時代"
  IN_GOLDEN_ERA_DESC:0 "我々の黄金時代は$UNTIL$まで続きます。"
  UNITY_INCREASE:0 "宗教的団結の増加：$VAL$"
- BANNER_CANT_HAVE:0 "主要文化が§Y満州§!の国家のみ八旗を召集することができます。\n"
  BANNER_NOT_OWNED_PROV:0 "あなたが所有するステートからのみ八旗を召集することができます。あなたが所有する州を選択してください。\n"
  ENEMY_ALLIES2:0 "$NAME|Y$は他に以下の同盟国を持っています：\n"
  ENEMY_ALLY_PLAYER:0 "@$TAG$ $NAME$（人間プレイヤー）\n"
