--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -537,7 +537,7 @@
  den_danske_lov:0 "デンマークの法典"
  den_danske_lov_desc:0 "それは数十年を費やしたが、正式な法典の編纂を成し遂げた。我々の最大の問題は、以前には、重複しているだけでなく、全く両立しない様々な地方や国家の法があったということだ。今、我々は統一された司法の制度を持っている。"
  religious_orthodoxy:0 "信教の自由とは神の否定である"
- religious_orthodoxy_desc:0 "啓蒙を覆い隠す物を要求する愚かな者達は、真なる啓蒙は聖書からよりにしか生まれないことを理解することが出来ない。我々は権力から遠ざけ、デンマークが自由となるようにする。"
+ religious_orthodoxy_desc:0 "啓蒙を覆い隠す物を要求する愚かな者たちは、真なる啓蒙は聖書からしか生まれないことを理解することが出来ない。我々は権力から遠ざけ、デンマークが自由となるようにする。"
  FRA_ideas:0 "フランスのアイデア"
  FRA_ideas_start:0 "フランスの伝統"
  FRA_ideas_bonus:0 "フランスの宿願"
